--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,15 @@
     <string name="about_care">Композиции из мыльных цветов — отличная альтернатива обычным цветам.\nНе каждый даже найдет отличия, потому что схожи они на 95%. А большой плюс в том, что за ними не нужен особый уход и срок хранения составляет порядка 3–5 лет.\nЦветы не являются искусственными.⠀Лепестки изготовлены из вспененного мыла, не требуют особого ухода, но «боятся» воды.\nПыль можно убирать холодным обдувом фена или любым сухим инвентарём для уборки.\nНе рекомендуется ставить композиции под прямые солнечные лучи, чтобы избежать потери насыщенности цвета.\n\nКомпозиции из мыльных роз носят в первую очередь ДЕКОРАТИВНЫЙ характер, но также их можно использовать и в бытовых целях:\n1. Мыть руки - одним лепестком можно вымыть руки 1–2 раза. Также можно мыть сразу целым бутоном, предварительно отсоединив основание бутона.\n2. Принимать ванну с лепестками - предварительно рекомендуем растворить лепестки в отдельной ёмкости, либо подставить бутон под струю воды, чтобы сразу образовывалась пена.\nС уважением и любовью, Smile Maker.</string>
     <string name="contact_Info">График работы:\n\nПриём заказов ежедневно с 9:00 до 21:00 \nСамовывоз готовых композиций и доставка - по договорённости\nСамовывоз готовых композиций по адресу:\nг.Гомель, ул.Чкалова д.108\n+375-25-769-66-33 Life</string>
     <string name="about_registration">ИП Сидорчук Андрей Юрьевич УНП 491540195\nР/с BY54ALFA30132A51870010270000 в ЗАО «Альфа-Банк», код ALFABY2X\nЮридический адрес: 246027, г. Гомель, ул. Чкалова д.108\nСвидетельство о государственной регистрации выдано Гомельским городским исполнительным комитетом Советского района от 29.06.2021 г. Интернет-магазин зарегистрирован в торговом реестре РБ за № 530895 от 25.03.2022 г.</string>
+    <string name="title_activity_about_flower">AboutFlowerActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
 </resources>
