--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">InPre</string>
+    <string name="app_name">Smile Maker</string>
     <string name="login">Логин</string>
     <string name="password">Пароль</string>
     <string name="smile_maker">Smile Maker</string>
