--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="about_registration">ИП Сидорчук Андрей Юрьевич УНП 491540195\nР/с BY54ALFA30132A51870010270000 в ЗАО «Альфа-Банк», код ALFABY2X\nЮридический адрес: 246027, г. Гомель, ул. Чкалова д.108\nСвидетельство о государственной регистрации выдано Гомельским городским исполнительным комитетом Советского района от 29.06.2021 г. Интернет-магазин зарегистрирован в торговом реестре РБ за № 530895 от 25.03.2022 г.</string>
     <string name="title_activity_about_flower">AboutFlowerActivity</string>
     <string name="in_basket">В корзину</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
