--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,15 @@
     <string name="dostavka">Доставка</string>
     <string name="basket">Корзина</string>
     <string name="contacts">Контакты</string>
-    <string name="about_care_new">Композиции из мыльных цветов - это оригинально, красиво, необычно и долговечно! \nЭти цветы:\n\n
+    <string name="about_care_new">Композиции из мыльных цветов - это оригинально, красиво, необычно и долговечно! \n\nЭти цветы:\n
 ✅ Будут радовать несколько лет\n
 ✅ На 95% схожи с обычными цветами\n
-✅ Не требуют особого ухода\n\nКомпозиции из мыльных цветов — отличная альтернатива обычным цветам.\nНе каждый даже найдет отличия, потому что схожи они на 95%. А большой плюс в том, что за ними не нужен особый уход и срок хранения составляет порядка 3–5 лет.\nЦветы не являются искусственными.⠀Лепестки изготовлены из вспененного мыла, не требуют особого ухода, но «боятся» воды.\nПыль можно убирать холодным обдувом фена или любым сухим инвентарём для уборки.</string>
+✅ Не требуют особого ухода\n\nКомпозиции из мыльных цветов — отличная альтернатива обычным цветам.\nНе каждый даже найдет отличия, потому что схожи они на 95%. А большой плюс в том, что за ними не нужен особый уход и срок хранения составляет порядка 3–5 лет.\nЦветы не являются искусственными.\nЛепестки изготовлены из вспененного мыла, не требуют особого ухода, но «боятся» воды.\nПыль можно убирать холодным обдувом фена или любым сухим инвентарём для уборки.</string>
     <string name="about_registration">ИП Сидорчук Андрей Юрьевич УНП 491540195\nР/с BY54ALFA30132A51870010270000 в ЗАО «Альфа-Банк», код ALFABY2X\nЮридический адрес: 246027, г. Гомель, ул. Чкалова д.108\nСвидетельство о государственной регистрации выдано Гомельским городским исполнительным комитетом Советского района от 29.06.2021 г. Интернет-магазин зарегистрирован в торговом реестре РБ за № 530895 от 25.03.2022 г.</string>
     <string name="title_activity_about_flower">AboutFlowerActivity</string>
     <string name="in_basket">В корзину</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ads">Посмотрите пожалуйста рекламу\n(так вы поможете разработчику)</string>
+    <string name="cooperation">Для сотрудничества с разработчиком\nпозвоните либо напишите (отправка email)</string>
 </resources>
