--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ads">Посмотрите пожалуйста рекламу\n(так вы поможете разработчику)</string>
-    <string name="cooperation">Для сотрудничества с разработчиком\nпозвоните либо напишите (отправка email)</string>
+    <string name="cooperation">Для сотрудничества с разработчиком\nпросто напишите (email)</string>
 </resources>
